--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
 h1 {
   color: pink;
+  font-size: 60px;
+  text-align: center;
+}
+p {
+  text-align: center;
+  font-size: 24px;
+  color: grey;
+}
+body {
+  background-color: lightblue;
+}
+button {
+  background-color: hotpink;
+  color: white;
+  font-size: 30px;
+  padding: 20px 40px;
+  border: none;
+  border-radius: 50px;
 }
