--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ p {
 }
 body {
   background-color: lightblue;
+  text-align: center;
 }
 button {
   text-align: center;
@@ -17,6 +18,6 @@ button {
   color: white;
   font-size: 30px;
   padding: 20px 40px;
-  border: 2px solid #04AA6D;
+  border: 2px solid #FFB2D0;
   border-radius: 50px;
 }
