--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@ h1 {
 p {
   text-align: center;
   font-size: 24px;
-  color: #FC6C85;
+  color: #E759AC;
 }
 body {
-  background-color: lightblue;
+  background-color: #D462FF;
   text-align: center;
 }
 button {
