--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('images/background.png');
+   background-image: url('background.png');
     background-size: cover;
     background-position: center;
     opacity: 0.3;
