--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ body {
 #gameScreen {
   position: relative;
   padding: 0;
-  background: #D462FF;
+  background: #transparent;
   justify-content: flex-start; /* override .screen centering */
 }
 
@@ -157,7 +157,7 @@ body {
   background-image: url('background.png');
   background-size: cover;
   background-position: center;
-  opacity: 0.28;
+  opacity: 1;
   z-index: 0;
 }
 
