--- a/style.css
+++ b/style.css
@@ -319,7 +319,9 @@ body {
   margin-bottom: 10px;
   filter: drop-shadow(0 6px 10px rgba(0,0,0,0.14));
 }
-
+.customer h3 {
+  display: none; /* Hide the name! */
+}
 
 /* Bubble with icons */
 .speech-bubble {
